--- a/src/main/resources/templates/create_account.html
+++ b/src/main/resources/templates/create_account.html
@@ -29,7 +29,8 @@
             var inputs = document.getElementsByTagName("input");
 
             // Reset borders of all input fields
-            for (var i = 0; i < inputs.length; i++) {
+            for (var i = 0; i < inputs.length; i++)
+            {
                 inputs[i].classList.remove("error-input");
             }
 
