--- a/src/main/resources/templates/update_profile.html
+++ b/src/main/resources/templates/update_profile.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Update Profile Page</title>
-    <style>
-        body
-        {
-            margin-top:20px;
-        }
-        .avatar
-        {
-            width:200px;
-            height:200px;
-        }
-    </style>
+
 </head>
+<style>
+    body
+    {
+        margin-top:20px;
+    }
+    .avatar
+    {
+        width:200px;
+        height:200px;
+    }
+
+    {
+        display: flex;
+        justify-content: center; /* Horizontally center */
+        align-items: center; /* Vertically center */
+        height: 100vh;
+    }
+</style>
 <body>
-<div class="container bootstrap snippets bootdey">
+<div class="container">
     <h1 class="text-primary">Edit Profile</h1>
     <hr>
     <div class="row">
@@ -39,46 +47,31 @@
             </div>
             <h3>Personal info</h3>
 
-            <form class="form-horizontal" role="form">
-                <div class="form-group">
-                    <label class="col-lg-3 control-label">First name:</label>
-                    <div class="col-lg-8">
-                        <input class="form-control" type="text" value="dey-dey">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-lg-3 control-label">Last name:</label>
-                    <div class="col-lg-8">
-                        <input class="form-control" type="text" value="bootdey">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-lg-3 control-label">Company:</label>
-                    <div class="col-lg-8">
-                        <input class="form-control" type="text" value="">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-lg-3 control-label">Email:</label>
-                    <div class="col-lg-8">
-                        <input class="form-control" type="text" value="janesemail@gmail.com">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-lg-3 control-label">Time Zone:</label>
-                    <div class="col-lg-8">
-                        <div class="ui-select">
-                            <select id="user_time_zone" class="form-control">
-                                <option value="Hawaii">(GMT-10:00) Hawaii</option>
-                                <option value="Alaska">(GMT-09:00) Alaska</option>
-                                <option value="Pacific Time (US &amp; Canada)">(GMT-08:00) Pacific Time (US &amp; Canada)</option>
-                                <option value="Arizona">(GMT-07:00) Arizona</option>
-                                <option value="Mountain Time (US &amp; Canada)">(GMT-07:00) Mountain Time (US &amp; Canada)</option>
-                                <option value="Central Time (US &amp; Canada)" selected="selected">(GMT-06:00) Central Time (US &amp; Canada)</option>
-                                <option value="Eastern Time (US &amp; Canada)">(GMT-05:00) Eastern Time (US &amp; Canada)</option>
-                                <option value="Indiana (East)">(GMT-05:00) Indiana (East)</option>
-                            </select>
+            <form th:action="@{/register}" th:object="${client}" method="POST" name="registrationForm" onsubmit="return validateForm()">
+                <div class="row register-form">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <input type="text" class="form-control"   th:field="*{name}" placeholder="First Name *" required />
                         </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" th:field="*{surname}" placeholder="Last Name *" required />
+                        </div>
+                        <div class="form-group">
+                            <input type="password" class="form-control" th:field="*{password}" placeholder="Password *" required />
+                        </div>
+                        <div class="form-group">
+                            <input type="password" class="form-control"  placeholder="Confirm Password *" required />
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <input type="email" class="form-control"  placeholder="Your Email *" required />
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" th:field="*{phone}"  minlength="10" maxlength="10" placeholder="Your Phone *" required />
+                        </div>
+
+                        <input type="submit" class="btn btn-primary btn-lg" value="Register" />
                     </div>
                 </div>
             </form>
