--- a/src/main/resources/templates/create_account.html
+++ b/src/main/resources/templates/create_account.html
@@ -66,7 +66,7 @@
             <p>If you have an account login below.</p>
             <form th:action="@{/user_login_page}" method="GET" >
                 <input type="submit" value="LOGIN" class="btn btn-primary btn-lg" /><br />
-            </form>
+            </form>N
         </div>
         <div class="col-md-9 register-right">
             <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
@@ -83,7 +83,7 @@
                         <div class="row register-form">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control"   th:field="*{name}" placeholder="First Name *" required />
+                                    <input type="text" class="form-control"  th:field="*{name}" placeholder="First Name *" required />
                                 </div>
                                 <div class="form-group">
                                     <input type="text" class="form-control" th:field="*{surname}" placeholder="Last Name *" required />
