--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -541,7 +541,7 @@
                     </div>
                 </div>
                     <div class="man_woman_buttons">
-                        <form th:action="@{/booking}" method="GET" >
+                        <form th:action="@{/booking}" method="get" >
                             <input type="submit" value="BOOK NOW" class="btn btn-primary btn-lg" /><br />
                         </form>
                     </div>
