--- a/src/main/resources/templates/bookings.html
+++ b/src/main/resources/templates/bookings.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -501,14 +501,22 @@
     }
 </style>
 <script>
-    $(document).ready(function() {
-        $('#menu-toggle').click(function(e) {
-            e.preventDefault();
-            $('.dashboard-nav-list').toggleClass('active');
-        });
-    });
+        $(document).ready(function() {
+        // Get today's date
+        var today = new Date();
 
+        // Calculate tomorrow's date
+        var tomorrow = new Date();
+        tomorrow.setDate(today.getDate() + 1);
+
+        // Format the date for the input field
+        var formattedDate = tomorrow.toISOString().substr(0, 10);
+
+        // Set the minimum date for the input field
+        document.getElementById("start").setAttribute("min", formattedDate);
+    });
 </script>
+
 <body>
 
 <div class='dashboard'>
@@ -528,20 +536,22 @@
 
     </div>
 
+
+
     <div class='dashboard-app'>
         <header class='dashboard-toolbar'><a href="#!" class="menu-toggle"><i class="fas fa-bars"></i></a></header>
         <div class='dashboard-content'>
             <div class='container'>
-                <form th:action="@{/confirmed_booking}"  method="POST" >
+                <form th:action="@{/confirm_booking}" th:object="${bookings}"  method="POST" >
                     <div class="row register-form">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input type="text" class="form-control"  placeholder="Name*" required />
+                                <input type="text" th:field="*{name}" class="form-control"  placeholder="Name*" required />
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control"  placeholder="Surname*" required />
+                                <input type="text" class="form-control" th:field="*{surname}" placeholder="Surname*" required />
                             </div>
-                            <select class="form-select" name="hairstyle" aria-label="Default select example">
+                            <select class="form-select" name="hairstyle" th:field="*{hairstyle}" aria-label="Default select example">
                                 <option selected>Select Hairstyle</option>
                                 <option value="fade_hair_cut">Fade Hair Cut</option>
                                 <option value="mohawk">Mohawk</option>
@@ -555,10 +565,11 @@
                                 <option value="hair_wash">Hair Wash</option>
                             </select>
                             <div class="form-group">
-                                <input type="date" id="start" name="trip-start" value="2018-07-22" min="2018-01-01" max="2018-12-31" />
+                                <label for="start">Select a Date:</label>
+                                <input type="date" id="start" th:field="*{bookingDate}" name="trip-start" min="" />
                             </div>
                             <div class="form-floating">
-                                <textarea class="form-control" placeholder="Leave additional information here" id="floatingTextarea"></textarea>
+                                <textarea class="form-control" th:field="*{comment}" placeholder="Leave additional information here" id="floatingTextarea"></textarea>
                                 <label for="floatingTextarea"></label>
                             </div>
                             <div>
