--- a/src/main/resources/templates/update_profile.html
+++ b/src/main/resources/templates/update_profile.html
@@ -24,6 +24,24 @@
     }
 </style>
 <body>
+<div class='dashboard'>
+    <div class="dashboard-nav">
+
+        <header><a href="" class="menu-toggle"><i class="fas fa-bars"></i></a><a href="#" class="brand-logo"><i
+                class="fas fa-anchor"></i> <span>Snip&Style</span></a></header>
+
+        <nav class="dashboard-nav-list"><a th:href="@{/home}" class="dashboard-nav-item"><i class="fas fa-home"></i>Home</a>
+            <a th:href="@{/view_appointments}" class="dashboard-nav-item active"><i class="fas fa-list-alt"></i> View Appointments</a>
+            <a th:href="@{/gallery}" class="dashboard-nav-item"><i class="fas fa-file-upload"></i> Gallery </a>
+            <a th:href="@{/update_profile}" class="dashboard-nav-item"><i class="fas fa-user"></i>Update Profile </a>
+            <div class="nav-item-divider"></div>
+            <form th:action="@{/logout}">
+                <a   class="dashboard-nav-item"><i class="fas fa-sign-out-alt"></i> Logout </a>
+            </form>
+        </nav>
+
+
+    </div>
 <div class="container">
     <h1 class="text-primary">Edit Profile</h1>
     <hr>
@@ -77,6 +95,7 @@
             </form>
         </div>
     </div>
+</div>
 </div>
 <hr>
 </body>
