--- a/src/main/resources/templates/client_login2.html
+++ b/src/main/resources/templates/client_login2.html
@@ -29,12 +29,12 @@
             <table>
                 <tr>
                     <td>Username:</td>
-                    <td><input type="text"  th:field="*{email}" class="form-control" placeholder="email address**" required /></td>
+                    <td><input type="text"  th:field="*{email}" class="form-control"  required /></td>
                 </tr>
 
                 <tr>
                     <td>Password:</td>
-                    <td><input type="text" th:field="*{password}" class="form-control" placeholder="password*" required /></td>
+                    <td><input type="text" th:field="*{password}" class="form-control" required /></td>
                 </tr>
                 <tr>
                     <td></td>
