--- a/src/main/resources/templates/client_login2.html
+++ b/src/main/resources/templates/client_login2.html
@@ -38,7 +38,7 @@
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input type="submit" value="LOGING"></td>
+                    <td><input type="submit" value="LOG IN"></td>
 
 
                     <td><a th:href="@{/reset_password.html}">Forgot Password?</a></td>
