--- a/src/main/resources/templates/create_account.html
+++ b/src/main/resources/templates/create_account.html
@@ -152,6 +152,9 @@
             <form th:action="@{/user_login_page}" method="get">
                 <input type="submit" value="LOGIN" class="btn btn-primary btn-lg" /><br />
             </form>
+            <form th:action="@{/admin_page}" method="get">
+                <input type="submit" value="ADMIN" class="btn btn-primary btn-lg" /><br />
+            </form>
         </div>
         <div class="col-md-9 register-right">
             <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
