--- a/src/main/resources/templates/clients_list.html
+++ b/src/main/resources/templates/clients_list.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <meta charset="UTF-8">
-    <title>Home Page</title>
+    <title>Clients List Page</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -515,10 +515,9 @@
         <header><a href="" class="menu-toggle"><i class="fas fa-bars"></i></a><a href="#" class="brand-logo"><i
                 class="fas fa-anchor"></i> <span>Snip&Style</span></a></header>
 
-        <nav class="dashboard-nav-list"><a th:href="@{/home}" class="dashboard-nav-item"><i class="fas fa-home"></i>Home</a>
-            <a th:href="@{/view_appointments}" class="dashboard-nav-item active"><i class="fas fa-list-alt"></i> View Appointments</a>
-            <a th:href="@{/gallery}" class="dashboard-nav-item"><i class="fas fa-file-upload"></i> Gallery </a>
-            <a th:href="@{/update_profile}" class="dashboard-nav-item"><i class="fas fa-user"></i>Update Profile </a>
+        <nav class="dashboard-nav-list">
+            <a th:href="@{/appointments_list}" class="dashboard-nav-item active"><i class="fas fa-list-alt"></i> View Appointments</a>
+            <a th:href="@{/clients_list}" class="dashboard-nav-item"><i class="fas fa-user-circle"></i>Clients </a>
             <div class="nav-item-divider"></div>
             <a th:href="@{/logout}" class="dashboard-nav-item"><i class="fas fa-sign-out-alt"></i> Logout </a>
         </nav>
