--- a/src/main/resources/static/css/indexcss.css
+++ b/src/main/resources/static/css/indexcss.css
@@ -87,8 +87,7 @@
     border-top-left-radius: 1.5rem;
     border-bottom-left-radius: 1.5rem;
 }
-.register-heading
-{
+.register-heading{
     text-align: center;
     margin-top: 8%;
     margin-bottom: -15%;
