--- a/src/main/resources/templates/create_account.html
+++ b/src/main/resources/templates/create_account.html
@@ -1,45 +1,136 @@
-
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome Page</title>
-    <link rel="stylesheet" href="indexcss.css">
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS -->.register{
+    background: -webkit-linear-gradient(left, #3931af, #00c6ff);
+    margin-top: 3%;
+    padding: 3%;
+    }
+    .register-left{
+    text-align: center;
+    color: #fff;
+    margin-top: 4%;
+    }
+    .register-left input{
+    border: none;
+    border-radius: 1.5rem;
+    padding: 2%;
+    width: 60%;
+    background: #f8f9fa;
+    font-weight: bold;
+    color: #383d41;
+    margin-top: 30%;
+    margin-bottom: 3%;
+    cursor: pointer;
+    }
+    .register-right{
+    background: #f8f9fa;
+    border-top-left-radius: 10% 50%;
+    border-bottom-left-radius: 10% 50%;
+    }
+    .register-left img{
+    margin-top: 15%;
+    margin-bottom: 5%;
+    width: 25%;
+    -webkit-animation: mover 2s infinite  alternate;
+    animation: mover 1s infinite  alternate;
+    }
+    @-webkit-keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-20px); }
+    }
+    @keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-20px); }
+    }
+    .register-left p{
+    font-weight: lighter;
+    padding: 12%;
+    margin-top: -9%;
+    }
+    .register .register-form{
+    padding: 10%;
+    margin-top: 10%;
+    }
+    .btnRegister{
+    float: right;
+    margin-top: 10%;
+    border: none;
+    border-radius: 1.5rem;
+    padding: 2%;
+    background: #0062cc;
+    color: #fff;
+    font-weight: 600;
+    width: 50%;
+    cursor: pointer;
+    }
+    .register .nav-tabs{
+    margin-top: 3%;
+    border: none;
+    background: #0062cc;
+    border-radius: 1.5rem;
+    width: 28%;
+    float: right;
+    }
+    .register .nav-tabs .nav-link{
+    padding: 2%;
+    height: 34px;
+    font-weight: 600;
+    color: #fff;
+    border-top-right-radius: 1.5rem;
+    border-bottom-right-radius: 1.5rem;
+    }
+    .register .nav-tabs .nav-link:hover{
+    border: none;
+    }
+    .register .nav-tabs .nav-link.active{
+    width: 100px;
+    color: #0062cc;
+    border: 2px solid #0062cc;
+    border-top-left-radius: 1.5rem;
+    border-bottom-left-radius: 1.5rem;
+    }
+    .register-heading{
+    text-align: center;
+    margin-top: 8%;
+    margin-bottom: -15%;
+    color: #495057;
+    }
+    <link rel="stylesheet" th:href="@{/css/indexcss.css}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <script>
-        function validateForm()
-        {
+        function validateForm() {
             var password = document.forms["registrationForm"]["password"].value;
             var confirmPassword = document.forms["registrationForm"]["confirm_password"].value;
             var inputs = document.getElementsByTagName("input");
 
             // Reset borders of all input fields
-            for (var i = 0; i < inputs.length; i++)
-            {
+            for (var i = 0; i < inputs.length; i++) {
                 inputs[i].classList.remove("error-input");
             }
 
             // Check if passwords match
-            if (password !== confirmPassword)
-            {
+            if (password !== confirmPassword) {
                 alert("Passwords do not match");
                 document.forms["registrationForm"]["password"].classList.add("error-input");
                 document.forms["registrationForm"]["confirm_password"].classList.add("error-input");
                 return false;
             }
 
-            // Check if all fields are attended
+            // Check if all required fields are filled
             for (var i = 0; i < inputs.length; i++) {
                 if (inputs[i].hasAttribute("required") && inputs[i].value === "") {
-                    alert("Please fill in all fields");
+                    alert("Please fill in all required fields");
                     inputs[i].classList.add("error-input");
                     return false;
                 }
@@ -72,31 +163,29 @@
                 <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                     <h3 class="register-heading">Create An Account</h3>
 
-
                     <form th:action="@{/register}" th:object="${client}" method="POST" name="registrationForm" onsubmit="return validateForm()">
                         <div class="row register-form">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control"  th:field="*{name}" placeholder="First Name *" required />
+                                    <input type="text" class="form-control" th:field="*{name}" placeholder="First Name *" required />
                                 </div>
                                 <div class="form-group">
                                     <input type="text" class="form-control" th:field="*{surname}" placeholder="Last Name *" required />
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control" th:field="*{password}" placeholder="Password *" required />
+                                    <input type="password" class="form-control" th:field="*{password}" name="password" placeholder="Password *" required />
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control"  placeholder="Confirm Password *" required />
+                                    <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password *" required />
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="email" class="form-control" th:field="*{email}"  placeholder="Your Email *" required />
+                                    <input type="email" class="form-control" th:field="*{email}" placeholder="Your Email *" required />
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" th:field="*{phone}"  minlength="10" maxlength="10" placeholder="Your Phone *" required />
+                                    <input type="text" class="form-control" th:field="*{phone}" minlength="10" maxlength="10" placeholder="Your Phone *" required />
                                 </div>
-
                                 <input type="submit" class="btn btn-primary btn-lg" value="Register" />
                             </div>
                         </div>
