--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -521,9 +521,8 @@
             <a th:href="@{/gallery}" class="dashboard-nav-item"><i class="fas fa-file-upload"></i> Gallery </a>
             <a th:href="@{/update_profile}" class="dashboard-nav-item"><i class="fas fa-user"></i>Update Profile </a>
             <div class="nav-item-divider"></div>
-            <form th:action="@{/logout}">
-                <a   class="dashboard-nav-item"><i class="fas fa-sign-out-alt"></i> Logout </a>
-            </form>
+            <a th:href="@{/user_login_page}"  class="dashboard-nav-item"><i class="fas fa-sign-out-alt"></i> Logout </a>
+
         </nav>
 
 
@@ -541,9 +540,8 @@
                     </div>
                 </div>
                     <div class="man_woman_buttons">
-                        <form th:action="@{/booking}" method="get" >
-                            <input type="submit" value="BOOK NOW" class="btn btn-primary btn-lg" /><br />
-                        </form>
+
+                        <a th:href="@{/booking_view}" class="dashboard-nav-item active"><i class="fas fa-list-alt"></i>Book</a>
                     </div>
                 <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
