--- a/src/main/resources/templates/forgotPassword.html
+++ b/src/main/resources/templates/forgotPassword.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="">
 <head>
+    <title>Forgot Password Page</title>
     <meta charset="UTF-8">
-    <title>Reset Password Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
+<!-- Password Reset 13 - Bootstrap Brain Component -->
 <section class="bg-light py-3 py-md-5">
     <div class="container">
         <div class="row justify-content-center">
@@ -13,13 +14,13 @@
                 <div class="card border border-light-subtle rounded-3 shadow-sm">
                     <div class="card-body p-3 p-md-4 p-xl-5">
 
-                        <h2 class="fs-6 fw-normal text-center text-secondary mb-4">Enter the new password</h2>
-                        <form action="#" method="post" th:action="@{/update_password}" th:object="${user}" >
+                        <h2 class="fs-6 fw-normal text-center text-secondary mb-4">Provide the email address associated with your account to recover your password.</h2>
+                        <form action="#" method="post" th:action="@{/change_password}" th:object="${user}" >
                             <div class="row gy-2 overflow-hidden">
                                 <div class="col-12">
                                     <div class="form-floating">
-                                        <input type="password" id="password" th:field="*{password}" class="form-control" placeholder="new password**" required />
-                                        <label for="password" class="form-label">Password</label>
+                                        <input type="text" id="email" th:field="*{email}" class="form-control" placeholder="email address**" required />
+                                        <label for="email" class="form-label">Email</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
