--- a/src/main/resources/templates/about_us.html
+++ b/src/main/resources/templates/about_us.html
@@ -26,6 +26,9 @@
                     </div>
                 </div>
             </div>
+                <form th:action="@{/home}" method="get">
+                    <input type="submit" value="BACK" class="btn btn-primary btn-lg" /><br />
+                </form>
         </div>
         </div>
     </div>
