--- a/src/main/resources/templates/forgotPassword.html
+++ b/src/main/resources/templates/forgotPassword.html
@@ -22,6 +22,10 @@
                                         <input type="text" id="email" th:field="*{email}" class="form-control" placeholder="email address**" required />
                                         <label for="email" class="form-label">Email</label>
                                     </div>
+                                    <div class="form-floating">
+                                        <input type="text" id="password" th:field="*{password}" class="form-control" placeholder="email address**" required />
+                                        <label for="email" class="form-label">Email</label>
+                                    </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="d-grid my-3">
