--- a/src/main/resources/templates/styles.css
+++ b/src/main/resources/templates/styles.css
@@ -480,7 +480,7 @@ h1, .h1 {
 
 .dashboard-app
 {
-    background-image: url('Pictures/Home-background.jpg');
+    background-image: url('../static/pictures/Home-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
