--- a/src/main/resources/templates/appointments_list.html
+++ b/src/main/resources/templates/appointments_list.html
@@ -46,7 +46,7 @@
 
     .dashboard-app
     {
-        background-image: url('Pictures/Home-background.jpg');
+        background-image: url('../static/pictures/Home-background.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
