--- a/src/main/resources/templates/create_account.html
+++ b/src/main/resources/templates/create_account.html
@@ -4,101 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome Page</title>
-    <!-- Bootstrap CSS -->.register{
-    background: -webkit-linear-gradient(left, #3931af, #00c6ff);
-    margin-top: 3%;
-    padding: 3%;
-    }
-    .register-left{
-    text-align: center;
-    color: #fff;
-    margin-top: 4%;
-    }
-    .register-left input{
-    border: none;
-    border-radius: 1.5rem;
-    padding: 2%;
-    width: 60%;
-    background: #f8f9fa;
-    font-weight: bold;
-    color: #383d41;
-    margin-top: 30%;
-    margin-bottom: 3%;
-    cursor: pointer;
-    }
-    .register-right{
-    background: #f8f9fa;
-    border-top-left-radius: 10% 50%;
-    border-bottom-left-radius: 10% 50%;
-    }
-    .register-left img{
-    margin-top: 15%;
-    margin-bottom: 5%;
-    width: 25%;
-    -webkit-animation: mover 2s infinite  alternate;
-    animation: mover 1s infinite  alternate;
-    }
-    @-webkit-keyframes mover {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-20px); }
-    }
-    @keyframes mover {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-20px); }
-    }
-    .register-left p{
-    font-weight: lighter;
-    padding: 12%;
-    margin-top: -9%;
-    }
-    .register .register-form{
-    padding: 10%;
-    margin-top: 10%;
-    }
-    .btnRegister{
-    float: right;
-    margin-top: 10%;
-    border: none;
-    border-radius: 1.5rem;
-    padding: 2%;
-    background: #0062cc;
-    color: #fff;
-    font-weight: 600;
-    width: 50%;
-    cursor: pointer;
-    }
-    .register .nav-tabs{
-    margin-top: 3%;
-    border: none;
-    background: #0062cc;
-    border-radius: 1.5rem;
-    width: 28%;
-    float: right;
-    }
-    .register .nav-tabs .nav-link{
-    padding: 2%;
-    height: 34px;
-    font-weight: 600;
-    color: #fff;
-    border-top-right-radius: 1.5rem;
-    border-bottom-right-radius: 1.5rem;
-    }
-    .register .nav-tabs .nav-link:hover{
-    border: none;
-    }
-    .register .nav-tabs .nav-link.active{
-    width: 100px;
-    color: #0062cc;
-    border: 2px solid #0062cc;
-    border-top-left-radius: 1.5rem;
-    border-bottom-left-radius: 1.5rem;
-    }
-    .register-heading{
-    text-align: center;
-    margin-top: 8%;
-    margin-bottom: -15%;
-    color: #495057;
-    }
+
     <link rel="stylesheet" th:href="@{/css/indexcss.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -145,7 +51,7 @@
 <div class="container register">
     <div class="row">
         <div class="col-md-3 register-left" style="text-align: left;">
-            <img src="Pictures/login_background.jpg" alt="" />
+            <img src="../static/pictures/login_background.jpg" alt="" />
             <h3>Welcome</h3>
             <p>If you have an account login below.</p>
 
@@ -157,11 +63,6 @@
             </form>
         </div>
         <div class="col-md-9 register-right">
-            <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Snip & Style</a>
-                </li>
-            </ul>
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                     <h3 class="register-heading">Create An Account</h3>
@@ -189,7 +90,7 @@
                                 <div class="form-group">
                                     <input type="text" class="form-control" th:field="*{phone}" minlength="10" maxlength="10" placeholder="Your Phone *" required />
                                 </div>
-                                <input type="submit" class="btn btn-primary btn-lg" value="Register" />
+                                <input type="submit" onclick="alert('Successfully Registered')" class="btn btn-primary btn-lg" value="Register" />
                             </div>
                         </div>
                     </form>
