--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -12,6 +12,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <style>
+    .btn-primary
+    {
+        font-size: 50px;
+        margin-top: 250px;
+    }
     .scrollable-cards-container {
         display: flex;
         overflow-x: auto;
@@ -46,7 +51,7 @@
 
     .dashboard-app
     {
-        background-image: url('Pictures/Home-background.jpg');
+        background-image: url('../static/pictures/Home-background.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -517,13 +522,12 @@
                 class="fas fa-anchor"></i> <span>Snip&Style</span></a></header>
 
         <nav class="dashboard-nav-list"><a th:href="@{/home}" class="dashboard-nav-item"><i class="fas fa-home"></i>Home</a>
-            <a th:href="@{/view_appointments}" class="dashboard-nav-item active"><i class="fas fa-list-alt"></i> View Appointments</a>
             <a th:href="@{/gallery}" class="dashboard-nav-item"><i class="fas fa-file-upload"></i> Gallery </a>
-            <a th:href="@{/update_profile}" class="dashboard-nav-item"><i class="fas fa-user"></i>Update Profile </a>
+            <a th:href="@{/about_us}" class="dashboard-nav-item"><i class="fas fa-user"></i>About Us </a>
+            <a th:href="@{/services}" class="dashboard-nav-item"><i class="fas fa-user"></i>Services </a>
+            <a th:href="@{/contact}" class="dashboard-nav-item"><i class="fas fa-user"></i>Contact Us</a>
             <div class="nav-item-divider"></div>
-            <form th:action="@{/logout}">
-                <a   class="dashboard-nav-item"><i class="fas fa-sign-out-alt"></i> Logout </a>
-            </form>
+            <a th:href="@{/logout}" class="dashboard-nav-item"><i class="fas fa-sign-out-alt"></i> Logout </a>
         </nav>
 
 
@@ -536,54 +540,17 @@
                     <div class='card-header'>
                         <h1>Welcome</h1>
                     </div>
-                    <div class='card-body'>
-                        <p>Your account type is: Administrator</p>
-                    </div>
                 </div>
                     <div class="man_woman_buttons">
-
-                        <a th:href="@{/booking_view}" class="dashboard-nav-item active"><i class="fas fa-list-alt"></i>Book</a>
+                        <form th:action="@{/booking_view}" method="get">
+                            <input type="submit" value="BOOK NOW" class="btn btn-primary btn-lg" /><br />
+                        </form>
                     </div>
-                <div id="demo" class="carousel slide" data-bs-ride="carousel">
-
-                    <!-- Indicators/dots -->
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-                        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-                        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-                    </div>
-
-                    <!-- The slideshow/carousel -->
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="Pictures/Home-background.jpg" alt="Los Angeles" class="d-block" style="width:500%">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="chicago.jpg" alt="Chicago" class="d-block" style="width:100%">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ny.jpg" alt="New York" class="d-block" style="width:100%">
-                        </div>
-                    </div>
-
-                    <!-- Left and right controls/icons -->
-                    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon"></span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-                        <span class="carousel-control-next-icon"></span>
-                    </button>
-                </div>
-
-                <div class="container-fluid mt-3">
-                    <h3>Carousel Example</h3>
-                    <p>The following example shows how to create a basic carousel with indicators and controls.</p>
-                </div>
             </div>
         </div>
     </div>
 </div>
-<img src="Pictures/Home-background.jpg" alt="Los Angeles" class="d-block" style="width:100%">
+<img src="../static/pictures/Home-background.jpg" alt="Los Angeles" class="d-block" style="width:100%">
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
