--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -174,7 +174,9 @@
 
     }
 
-    .dashboard-app {
+    .dashboard-app
+    {
+        background-image: url("Home-background.jpg");
         display: -webkit-box;
         display: -webkit-flex;
         display: -ms-flexbox;
