--- a/src/main/resources/templates/all_bookings_page.html
+++ b/src/main/resources/templates/all_bookings_page.html
@@ -66,6 +66,9 @@
         </tr>
         </tbody>
     </table>
+    <form th:action="@{/admin}" method="get">
+        <input type="submit" value="BACK" class="btn btn-primary btn-lg" /><br />
+    </form>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
