--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -51,7 +51,9 @@
             <p>0817926270</p>
         </a>
     </div>
-
+    <form th:action="@{/home}" method="get">
+        <input type="submit" value="BACK" class="btn btn-primary btn-lg" /><br />
+    </form>
 </div>
 <!-- Bootstrap JS (optional, only if you need Bootstrap JS functionalities) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-Q6E9RHvbIyZFJfJezJ+NL2+r0s+Qvc15SG9G8+gwR0szcIu0NisL9JTw+UzPjcDx" crossorigin="anonymous"></script>
